syntax = "proto3";

package pb;

import "targetList.proto";

option go_package = "Backend/pb";

// Create
message CreateTargetListRequest {
    string SessionID = 1; 
    int32 Target1ID = 2;
    string T1Type = 3;
    int32 Target2ID = 4;
    string T2Type = 5;
    int32 Target3ID = 6;
    string T3Type = 7;
}

message CreateTargetListResponse {
    Targetlist tl = 1;
}

// Get
message GetTargetListRequest {
    string SessionID = 1;
    int32 UserID = 2;
}
message GetTargetListResponse {
    Targetlist tl = 1;
}

// Update
message UpdateTargetListRequest {
    string SessionID = 1;
    int32 Target1ID = 2;
    string T1Type = 3;
    int32 Target2ID = 4;
    string T2Type = 5;
    int32 Target3ID = 6;
    string T3Type = 7;
}
message UpdateTargetListResponse {
    Targetlist tl = 1;
}

// Delete
message DeleteTargetListRequest {
    string SessionID = 1;
}